--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.2.0",
     "rimraf": "^2.4.2"
+  },
+  "dependencies": {
+    "lodash": "^3.10.1"
   }
 }
