--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-minify-css": "^1.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
+    "gulp-sftp": "^0.1.5",
     "gulp-uglify": "^1.2.0",
     "rimraf": "^2.4.2"
   },
