--- a/package.json
+++ b/package.json
@@ -1,7 +1,23 @@
 {
-  "name": "jamiechung",
+  "name": "attnjamie",
   "version": "0.0.1",
-  "description": "Personal website",
-  "repository": {
-    "type": "git"
-  }}
+  "description": "personal website",
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-connect": "^2.2.0",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.0.4",
+    "gulp-sftp": "^0.1.5",
+    "gulp-uglify": "^1.2.0",
+    "rimraf": "^2.4.2"
+  },
+  "dependencies": {
+    "fastclick": "^1.0.6",
+    "jquery": "^2.2.1",
+    "lodash": "^3.10.1"
+  }
+}
